# sealantd

./: .dockerignore  .gitignore  Cargo.toml  README.md  buf.gen.yaml  buf.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.changeset/: README.md  config.json  gateway-daemon-eager-teardown-exec-attach.md  gateway-daemon-phase1.md  sdk-channel-mux-client.md  vast-dancers-sit.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  version.yml
crates/sealant-control/: Cargo.toml
crates/sealant-control/src/: lib.rs  peer.rs  server.rs  service.rs
crates/sealant-eventlog/: Cargo.toml
crates/sealant-eventlog/src/: lib.rs  record.rs  spool.rs
crates/sealant-network/: Cargo.toml
crates/sealant-network/src/: capability.rs  forward.rs  lib.rs  proxy.rs  runtime.rs
crates/sealant-process/src/: lib.rs  platform.rs  runtime.rs  sftp.rs
crates/sealant-protocol/: Cargo.toml  build.rs
crates/sealant-protocol/proto/: sealant.proto
crates/sealant-protocol/src/: command.rs  convert.rs  event.rs  ids.rs  lib.rs  message.rs  stream.rs
crates/sealant-pty/src/: session.rs
crates/sealant-runtime-core/src/: config.rs  idgen.rs  lib.rs  redact.rs  status.rs
crates/sealant-telemetry/: Cargo.toml
crates/sealant-telemetry/src/: bus.rs
crates/sealantctl/src/: main.rs
crates/sealantd/: Cargo.toml
crates/sealantd/src/: app.rs  lib.rs  runtime.rs
crates/sealantd/src/boot/: config.rs  dotfiles.rs  error.rs  git.rs  mod.rs  ssh.rs
crates/sealantd/tests/: e2e.rs
docker/: Dockerfile  Dockerfile.test
docs/adr/: 0002-wire-schema-and-framing.md  0012-protobuf-wire-format.md  README.md
docs/runtime/: benchmarks.md  integration.md  known-limitations.md  operations.md  requirements-matrix.md
examples/: demo.sh
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: decode_client.rs  decode_event.rs  decode_server.rs
scripts/: build-release.sh  linux-test.sh
spikes/wire-bench/: Cargo.toml  build.rs  envelope.proto
spikes/wire-bench/src/: main.rs
