[package]
name = "wire-bench"
version = "0.0.0"
edition = "2021"
publish = false

# Detach from the main workspace.
[workspace]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
serde_bytes = "0.11"
base64 = "0.22"
prost = "0.13"

[build-dependencies]
prost-build = "0.13"

[profile.release]
opt-level = 3
